--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,6 +29,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8     //added as a fix //REVIEW: correct Java version?
+        targetCompatibility JavaVersion.VERSION_1_8     //added as a fix //REVIEW: correct Java version?
+    }
 }
 
 
