change firebase dependencies, add multiDex

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -95,3 +96,10 @@ task run(type: Exec) {
 }
 
 eclipse.project.name = appName + "-android"
+
+dependencies {
+    implementation platform('com.google.firebase:firebase-bom:29.2.1')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
+}
