--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
+
         
 
     }
@@ -49,6 +50,9 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+
+        implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
+        //implementation "com.badlogicgames.gdx:gdx-freetype:1.10.0"
         
     }
 }
@@ -70,6 +74,23 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
+
+        implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi-v7a"
+        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-arm64-v8a"
+        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86"
+        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86_64"
+        //implementation "com.badlogicgames.gdx:gdx-freetype:1.10.0"
+        //natives "com.badlogicgames.gdx:gdx-freetype-platform:1.10.0:natives-armeabi"
+        //natives "com.badlogicgames.gdx:gdx-freetype-platform:1.10.0:natives-armeabi-v7a"
+        //natives "com.badlogicgames.gdx:gdx-freetype-platform:1.10.0:natives-arm64-v8a"
+        //natives "com.badlogicgames.gdx:gdx-freetype-platform:1.10.0:natives-x86"
+        //natives "com.badlogicgames.gdx:gdx-freetype-platform:1.10.0:natives-x86_64"
+
+        //natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi"
+
+
+
         
     }
 }
@@ -81,6 +102,10 @@ project(":core") {
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+
+        implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+
+        //implementation "com.badlogicgames.gdx:gdx-freetype:1.10.0"
         
     }
 }
