--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,10 @@
 sourceCompatibility = 1.7
+dependencies {
+    implementation 'junit:junit:4.12'
+}
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
+sourceSets.test.java.srcDirs = [ "test/" ]
 
 eclipse.project.name = appName + "-core"
